--- a/doc/trunk/design/syn/S05.pod
+++ b/doc/trunk/design/syn/S05.pod
@@ -14,9 +14,9 @@ Allison Randal <al@shadowed.net>
    Maintainer: Patrick Michaud <pmichaud@pobox.com> and
                Larry Wall <larry@wall.org>
    Date: 24 Jun 2002
-   Last Modified: 18 Oct 2006
+   Last Modified: 23 Dec 2006
    Number: 5
-   Version: 40
+   Version: 41
 
 This document summarizes Apocalypse 5, which is about the new regex
 syntax.  We now try to call them I<regex> rather than "regular
@@ -3024,7 +3024,7 @@ indicates that C<@foo[42]> was the first element I<not> included.
 Anything that can be tied to a string can be matched against a
 regex. This feature is particularly useful with input streams:
 
-     my $stream is from($fh);       # tie scalar to filehandle
+     my $stream := cat =$fh;       # tie scalar to filehandle
 
      # and later...
 
