--- a/doc/trunk/design/syn/S12.pod
+++ b/doc/trunk/design/syn/S12.pod
@@ -1591,7 +1591,7 @@ Metamethods for objects are named with interrogative pronouns in uppercase:
     WHEN        (reserved for events?)
     WHY         (reserved for documentation?)
 
-These may be use either as methods or as unary operators:
+These may be used either as methods or as unary operators:
 
     $obj.WHAT   # method form of P5's ref
     WHAT $obj   # unary form of P5's ref
