testing commit bit
git-svn-id: http://svn.pugscode.org/pugs@14942 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/AUTHORS
+++ b/AUTHORS
@@ -50,6 +50,7 @@ Chris Jeris
 Christopher Malon                (OFUN)
 Christopher "cpruden" Pruden
 chromatic                        (CHROMATIC)
+Colin "perlDreamer" Kuskie
 Colin Paul Adams
 Chuck "sproingie" Adams
 C.J. Adams-Collier               (CJ)
