Adding my name to check commit bit
git-svn-id: http://svn.pugscode.org/pugs@14955 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/AUTHORS
+++ b/AUTHORS
@@ -127,6 +127,7 @@ Mark "ninereasons" McConnell     (MISCHKE)
 Mark Grimes                      (MGRIMES)
 Mark Stosberg                    (MARKSTOS)
 Markus "malaire" Laire
+Martin "tumulus" McCarthy        (MARTY)
 "mattc"
 Matt Diephouse
 Matthew "diakopter" Wilson       (WILSON)
