mp6-mo - remove old AST/ and Perl5MO/ dirs
git-svn-id: http://svn.pugscode.org/pugs@14984 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/v6/v6-MiniPerl6-MO/miniperl6-mo-plan.pod
+++ b/v6/v6-MiniPerl6-MO/miniperl6-mo-plan.pod
@@ -21,8 +21,6 @@
 
 TODO:
 
-- Add a new method to an existing class
-
 - Extend the grammar with MO words: Rule, etc.
 
 - Compiler bootstrap with MO
@@ -46,3 +44,6 @@ FOR LATER:
 - 'our'
 - containers
 - type-checking
+
+- Add a new method to an existing class
+  - wait for MO emit_class()
