--- a/v6/v6-MiniPerl6-MO/miniperl6-mo-plan.pod
+++ b/v6/v6-MiniPerl6-MO/miniperl6-mo-plan.pod
@@ -21,15 +21,16 @@
 
 TODO:
 
-- Extend the grammar with MO words: Rule, etc.
+- Extend the grammar with MO words: Role, etc.
 
 - Compiler bootstrap with MO
 
 - test " Obj.new( attr=>value ) "
 
-- unnamed classes
+- unnamed classes (see 2007-01-02 irc log)
 
 - rename lib/MiniPerl6 to lib/MiniPerl6_MO
+  in order to co-exist with mp6-no-mo
 
 DONE:
 
