mp6-mo - change all p5 method calls to 'native'
git-svn-id: http://svn.pugscode.org/pugs@14988 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/v6/v6-MiniPerl6-MO/miniperl6-mo-plan.pod
+++ b/v6/v6-MiniPerl6-MO/miniperl6-mo-plan.pod
@@ -21,7 +21,8 @@
 
 TODO:
 
-- Extend the grammar with MO words: Role, etc.
+- Extend the grammar with MO words: 
+  Roles, inheritance, etc.
 
 - Compiler bootstrap with MO
 
