Fixed an error in the prefix | discussion.
git-svn-id: http://svn.pugscode.org/pugs@23666 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S03.pod
+++ b/doc/trunk/design/syn/S03.pod
@@ -1560,7 +1560,7 @@ Note that the resulting arguments still must comply with the subroutine's
 signature, but the presence of C<|> defers that test until run time for
 that argument (and for any subsequent arguments):
 
-    my @args := @foo, @bar;
+    my @args := [@foo, @bar];
     push |@args;
 
 is equivalent to:
